header-footer-css y en js intento de validar

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/home.css">
+    <link rel="stylesheet" href="css/header-footer.css">
     <link rel="flaticon" href="img/boxeo.png">
     <title>Home</title>
 </head>
@@ -41,7 +42,7 @@
     </main>
     <br>
     
-    <br>
+    <!-- footer empieza -->
     <footer id="idfooter"> 
         </a>
         <a class="redsoc" href="https://www.facebook.com" target="blank">
@@ -53,7 +54,6 @@
             <img class="redsoc"  src="img/002-instagram.png" alt="instagram">
         </a>
     </footer>
-
-    <script src="js/script.js"></script>
+    <!-- footer termina -->
 </body>
 </html>
