--- a/contacto.html
+++ b/contacto.html
@@ -4,50 +4,81 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/contacto.css">
+    <link rel="stylesheet" href="css/header-footer.css">
     <link rel="shortcut icon" href="Imagenes/boxeo.png">
     <title>Contactanos</title>
 </head>
 <body>
     <!-- aca iria el header de nuevo -->
+    <header id="idheader">
+        <nav id="nav-bar">
+            <div> Be Strong </div>
+            <div> <a id = "about-link" class="navbar-link" href="nosotros.html">Nosotros </a></div>
+            <div> <a id = "home-link" class="navbar-brand" href="Index.html">Home </a> </div>
+            <div> <a id = "sedes-link" class="navbar-link" href="sedes.html">Sedes </a></div>
+            <div> <a id = "contact-link" class="navbar-link" href="contacto.html">Contacto </a></div>
+            <div> <button id="dark-mode-button"> Modo </button> </div>
+        </nav> 
+    </header>
+    <!-- header termina -->
+    <br>
     <!-- aca pongo un formulario -->
     <main>
         <section>
             <h1> Contactanos </h1>
-            <div class="form" id="form">
-                <input type="string" class="nombre" id="name" placeholder="">
-                <label for="name" class="nombre"> Nombre y Apellido </label>
-                <br>
-                <input type="email" class="correo" id="email" placeholder="name@example.com">
-                <label for="correo" class="correo"> Email </label>
-            </div>
-            
-            <div>
-                <input type="number">
-                <label for="tel"> Telefono </label> 
-                <br>
-                <label for="sede"> Sede </label>
-                <select class="select" aria-label="Default select example" >
-                    <option selected> Elige tu sede</option>
-                    <option value="1">Martinez</option>
-                    <option value="2">Palermo</option>
-                    <option value="3">San Telmo</option>
-                    <option value="4">Tigre</option>
-                </select>
-            <br>         
-                <div class="consulta">
+            <form id="form" onsubmit="return validateForm()">
+                <div>
+                    <input type="string" class="nombre" id="name" placeholder=""> <!--  nombre y apellido -->
+                    <label for="name" class="nombre"> Nombre y Apellido </label>
+                    <br>
+                    <input type="email" class="correo" id="email" placeholder="name@example.com">
+                    <label for="correo" class="correo"> Email </label> <!-- correo -->
+                    <br>
+                    <input type="number">
+                    <label for="tel"> Telefono </label>  <!-- telefono -->
+                    <br>
+                    <label for="sede"> Sede </label>
+                    <select class="select" aria-label="Default select example" >  <!-- sede -->
+                        <option selected> Elige tu sede</option>
+                        <option value="1">Martinez</option>
+                        <option value="2">Palermo</option>
+                        <option value="3">San Telmo</option>
+                        <option value="4">Tigre</option>
+                    </select>
+                </div>
+                <br>         
+                <div class="consulta"> <!-- consulta aparte -->
                     <label for="consulta" class="consulta" id=" consulta">Envianos tu consulta</label>
                     <textarea class="form-control" id="consult" rows="3"></textarea>
                     <br>
                     <label for="submit" class="submit"></label>
+                </div>
+               <div>  <!-- y aca los dos botones -->
                     <button type="submit"> Enviar datos </button> 
                     <!-- para validad -->
                     <p class="warnings" id="warnings"></p>
                     <label for="reset" class="reset"></label>
                     <input type="reset" value="Borrar datos">
-                </div>    
+               </div>
+            </form>    
         </section>
     </main>
-    <!-- aca iria el footer de nuevo -->
+    <!-- footer empieza -->
+    <footer id="idfooter"> 
+        </a>
+        <a class="redsoc" href="https://www.facebook.com" target="blank">
+            <img class="redsoc"  src="img/001-facebook.png" alt="facebook">
+        </a>
+        <a class="redsoc" href="https://www.twitter.com" target="blank">
+            <img class="redsoc"  src="img/003-twitter.png" alt="twitter">
+        <a src=""  href="https://www.instagram.com/?hl=es" target="blank">
+            <img class="redsoc"  src="img/002-instagram.png" alt="instagram">
+        </a>
+    </footer>
+    <!-- footer termina -->
+
+    <!-- aca va la validacion -link a js -->
+    <script src="js/validacion.js"> </script>
+    
 </body>
-<script src="js/validacion.js"> </script>
 </html>
