--- a/sedes.html
+++ b/sedes.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/sedes.css">
+    <link rel="stylesheet" href="css/header-footer.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@400;700&display=swap">
     <link rel="icon" href="img/boxeo.png">
     <title>Nuestras Sedes</title>
@@ -11,7 +12,18 @@
 <body>
     <main>
         <section>
-            <div class="header-container">
+                <!-- aca iria el header de nuevo -->
+            <header id="idheader">
+            <nav id="nav-bar">
+            <div> Be Strong </div>
+            <div> <a id = "about-link" class="navbar-link" href="nosotros.html">Nosotros </a></div>
+            <div> <a id = "home-link" class="navbar-brand" href="Index.html">Home </a> </div>
+            <div> <a id = "sedes-link" class="navbar-link" href="sedes.html">Sedes </a></div>
+            <div> <a id = "contact-link" class="navbar-link" href="contacto.html">Contacto </a></div>
+            <div> <button id="dark-mode-button"> Modo </button> </div>
+        </nav> 
+    </header>
+            <div class="header-container"> <!-- ya sabemos que no es un header sino un titulo-->
                 <h1> Vení a conocer nuestras sedes! </h1>
             </div>
             <div class="grid-container">
@@ -70,5 +82,18 @@
             <p class="motivational-quote">Nuestras instalaciones son el escenario donde tu determinación se convierte en éxito.</p>
         </section>
     </main>
+     <!-- footer empieza -->
+     <footer id="idfooter"> 
+        </a>
+        <a class="redsoc" href="https://www.facebook.com" target="blank">
+            <img class="redsoc"  src="img/001-facebook.png" alt="facebook">
+        </a>
+        <a class="redsoc" href="https://www.twitter.com" target="blank">
+            <img class="redsoc"  src="img/003-twitter.png" alt="twitter">
+        <a src=""  href="https://www.instagram.com/?hl=es" target="blank">
+            <img class="redsoc"  src="img/002-instagram.png" alt="instagram">
+        </a>
+    </footer>
+    <!-- footer termina -->
 </body>
 </html>
