--- a/sedes.html
+++ b/sedes.html
@@ -23,7 +23,7 @@
             <div> <button id="dark-mode-button"> Modo </button> </div>
         </nav> 
     </header>
-            <div class="header-container"> <!-- ya sabemos que no es un header sino un titulo-->
+            <div class="header-container">
                 <h1> Vení a conocer nuestras sedes! </h1>
             </div>
             <div class="grid-container">
