--- a/sedes.html
+++ b/sedes.html
@@ -15,7 +15,9 @@
                 <!-- aca iria el header de nuevo -->
             <header id="idheader">
             <nav id="nav-bar">
-            <div> Be Strong </div>
+                <div>
+                    <span style="font-family: 'Georgia', serif; font-size: 36px; color: #fffcfc; text-decoration: underline;">Be Strong</span>
+                </div>
             <div> <a id = "about-link" class="navbar-link" href="nosotros.html">Nosotros </a></div>
             <div> <a id = "home-link" class="navbar-brand" href="Index.html">Home </a> </div>
             <div> <a id = "sedes-link" class="navbar-link" href="sedes.html">Sedes </a></div>
