--- a/nosotros.html
+++ b/nosotros.html
@@ -77,6 +77,7 @@
     <!-- footer termina -->
     
     <script src="js/api.js"></script>
+    <script src="js/modo.js"></script>
 </body>
 </html>
 
