--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 
     <main>
         <section class=" why-choose-us">
-            <h1>Porque Elegirnos</h1>
+            <h1 class="titulo">Porque Elegirnos</h1>
             <p> En Boxing, somos apasionados por el deporte del boxeo y estamos comprometidos a proporcionarte la mejor experiencia en el mundo del boxeo. Aquí te explicamos por qué deberías elegirnos:
             </p>
             <iframe class="video"  src="https://www.youtube.com/embed/Vhhai08TzA8?si=0-JAp39xByi_icmN&amp;autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
