--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
 </head>
 
 <body>
-    <!-- header empieza -->
+    <div class="Contenedor-padre">
+   
     <header id="idheader">
         <nav id="nav-bar">
             <div> Be Strong </div>
@@ -21,23 +22,38 @@
             <div> <button id="dark-mode-button"> Modo </button> </div>
         </nav> 
     </header>
-    <!-- header termina -->
     <br>
 
     <main>
         <section class=" why-choose-us">
-            <h1 class="titulo">Porque Elegirnos</h1>
-            <p> En Boxing, somos apasionados por el deporte del boxeo y estamos comprometidos a proporcionarte la mejor experiencia en el mundo del boxeo. Aquí te explicamos por qué deberías elegirnos:
+            <h1 class="Titulo">POR QUÉ ELEGIRNOS</h1>
+            <p class="Párrafo"> En Boxing, somos apasionados por el deporte y estamos comprometidos a proporcionarte la mejor experiencia en el mundo del boxeo. Aquí te explicamos por qué deberías elegirnos:
             </p>
             <iframe class="video"  src="https://www.youtube.com/embed/Vhhai08TzA8?si=0-JAp39xByi_icmN&amp;autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            <h1> Beneficios por subscripcion</h1>
-            <ul>
-                <li> Experiencia y Conocimiento </li>
-                <li> Amplios Horarios </li>
-                <li> Recursos de Entrenamiento Integral</li>
-                <li> Comunidad y Apoyo </li>
-                <li> Acceso en Cualquier Momento y en Cualquier Lugar </li>
-            </ul>
+            <div class="Beneficios1">
+                <img class="B1" src="img/B1.jpeg" alt="Imagen B1">
+                <h1> Beneficios por suscripción</h1>
+                <ul>
+                    <li>Experiencia y Conocimiento </li>
+                    <li>Amplios Horarios </li>
+                    <li>Recursos de Entrenamiento Integral</li>
+                    <li>Comunidad y Apoyo </li>
+                    <li>Acceso en Cualquier Momento y en Cualquier Lugar </li>
+                </ul>
+            </div>
+        <br><br>
+            <div class="Beneficios2">
+             <img class="B2" src="img/B2.jpeg" alt="Imagen B2">
+                <h1>Más Beneficios</h1>
+                <ul>
+                    <li>Libera tensiones y estrés</li>
+                    <li>Mejora tu resistencia física</li>
+                    <li>Mejora tu salud cardiovascular</li>
+                    <li>Trabaja todo tu cuerpo</li>
+                    <li>Mejora la estabilidad corporal</li>
+                </ul>
+            </div>
+        
         </section>
     </main>
     <br>
@@ -56,5 +72,6 @@
     </footer>
     <!-- footer termina -->
     <script src="js/modo.js"></script>
+</div>
 </body>
 </html>
