mejoras + codigo mas prolijo/se eliminan mayusc

--- a/index.html
+++ b/index.html
@@ -25,21 +25,26 @@
     <br>
 
     <main>
+        <section class="welcome"> 
+        <h1> BIENVENIDO A BE STRONG BOXING </h1>
+        <br>
+        <img class="foto_inicial" src="img/fondo.jpg" alt="box">
+        </section>
+
+        <br>    
         <section class=" why-choose-us">
-            <h1 class="Titulo">POR QUÉ ELEGIRNOS</h1>
-<<<<<<< HEAD
-            <p class="Párrafo"> En Boxing, somos apasionados por el deporte y estamos comprometidos a proporcionarte la mejor experiencia en el mundo del boxeo. Aquí te explicamos por qué deberías elegirnos:
+            <h1 class="titulo">PORQUÉ ELEGIRNOS</h1>
+            <p class="párrafo"> En Boxing, somos apasionados por el deporte y estamos comprometidos a proporcionarte la mejor experiencia en el mundo del boxeo. Aquí te explicamos por qué deberías elegirnos:
             </p>
             <iframe class="video"  src="https://www.youtube.com/embed/Vhhai08TzA8?si=0-JAp39xByi_icmN&amp;autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            <div class="Beneficios1">
+            <br>
+            <div class="beneficios1">
                 <img class="B1" src="img/B1.jpeg" alt="Imagen B1">
-=======
-            <p class="Párrafo"> En Boxing, somos apasionados por el deporte del boxeo y estamos comprometidos a proporcionarte la mejor experiencia en el mundo del boxeo. Aquí te explicamos por qué deberías elegirnos:
+            <p class="párrafo"> En Boxing, somos apasionados por el deporte del boxeo y estamos comprometidos a proporcionarte la mejor experiencia en el mundo del boxeo. Aquí te explicamos por qué deberías elegirnos:
             </p>
-            <iframe class="video"  src="https://www.youtube.com/embed/Vhhai08TzA8?si=0-JAp39xByi_icmN&amp;autoplay=1" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-            <div class="Beneficios1">
+            
+            <div class="beneficios1">
                 <img class="B1" src="img/B1.jpg" alt="Imagen B1">
->>>>>>> 1426756d82e86a3105c266fe13c431843078dc2f
                 <h1> Beneficios por suscripción</h1>
                 <ul>
                     <li>Experiencia y Conocimiento </li>
@@ -50,12 +55,10 @@
                 </ul>
             </div>
         <br><br>
-            <div class="Beneficios2">
-<<<<<<< HEAD
+
+            <div class="beneficios2">
              <img class="B2" src="img/B2.jpeg" alt="Imagen B2">
-=======
              <img class="B2" src="img/B2.jpg" alt="Imagen B2">
->>>>>>> 1426756d82e86a3105c266fe13c431843078dc2f
                 <h1>Más Beneficios</h1>
                 <ul>
                     <li>Libera tensiones y estrés</li>
