--- a/contacto.html
+++ b/contacto.html
@@ -70,7 +70,7 @@
                         <textarea class="form-control" id="consult" style="width: 60%; height: 50px;"></textarea>
                     </div>
                 </div>
-            <div class="form-group">
+            <div class="botones">
                 <button type="submit">Enviar datos</button>
                 <input type="reset" value="Borrar datos">
             </div>
