--- a/contacto.html
+++ b/contacto.html
@@ -24,7 +24,7 @@
     <br>
     <main>
         <section>
-            <h1>Contactanos</h1>
+            <h1 class="contacto">Contactanos</h1>
             <form id="form">
                 <div class="form-group">
                     <label for="name" class="nombre">Nombre y Apellido</label>
