--- a/contacto.html
+++ b/contacto.html
@@ -13,24 +13,12 @@
 <body>
     <header id="idheader">
         <nav id="nav-bar">
-            <div>
-                <span style="font-family: 'Georgia', serif; font-size: 36px; color: #fffcfc; text-decoration: underline;">Be Strong</span>
-            </div>
-            <div>
-                <a id="about-link" class="navbar-link" href="nosotros.html">Nosotros</a>
-            </div>
-            <div>
-                <a id="home-link" class="navbar-brand" href="Index.html">Home</a>
-            </div>
-            <div>
-                <a id="sedes-link" class="navbar-link" href="sedes.html">Sedes</a>
-            </div>
-            <div>
-                <a id="contact-link" class="navbar-link" href="contacto.html">Contacto</a>
-            </div>
-            <div>
-                <button id="dark-mode-button">Modo</button>
-            </div>
+            <img class="logo" src="img/logo.jpg" alt="logo">
+            <div> <a id="about-link" class="navbar-link" href="nosotros.html">Nosotros</a> </div>
+            <div> <a id="home-link" class="navbar-brand" href="Index.html">Home</a> </div>
+            <div> <a id="sedes-link" class="navbar-link" href="sedes.html">Sedes</a> </div>
+            <div> <a id="contact-link" class="navbar-link" href="contacto.html">Contacto</a> </div>
+            <div> <button id="dark-mode-button">Modo</button> </div>
         </nav> 
     </header>
     <br>
@@ -80,6 +68,8 @@
 
         </section>
     </main>
+    <br>        
+
     <footer id="idfooter"> 
         <a class="redsoc" href="https://www.facebook.com" target="blank">
             <img class="redsoc" src="img/001-facebook.png" alt="facebook">
