--- a/nosotros.html
+++ b/nosotros.html
@@ -13,7 +13,7 @@
     <!-- aca iria el header de nuevo -->
     <header id="idheader">
         <nav id="nav-bar">
-            <div> Be Strong </div>
+            <img class="logo" src="img/logo.jpg" alt="logo">
             <div> <a id = "about-link" class="navbar-link" href="nosotros.html">Nosotros </a></div>
             <div> <a id = "home-link" class="navbar-brand" href="Index.html">Home </a> </div>
             <div> <a id = "sedes-link" class="navbar-link" href="sedes.html">Sedes </a></div>
