--- a/sedes.html
+++ b/sedes.html
@@ -16,7 +16,7 @@
         <header id="idheader">
             <nav class = "cajaNav" id="cajaNav">
                 <div class="titNav">
-                    <span style="font-family: 'Georgia', serif; font-size: 36px; color: #fffcfc; text-decoration: underline;">Be Strong</span>
+                    <img class="logo" src="img/logo.jpg" alt="logo"> 
                     <div> <button id="dark-mode-button"> Modo </button> </div>
                     <div class="toggle" onclick="alternar('menu')"> Abrir </div>
                 </div>
