--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
    
     <header id="idheader">
         <nav id="nav-bar">
-            <div> Be Strong </div>
+            <img class="logo" src="img/logo.jpg" alt="logo"> 
             <div> <a id = "about-link" class="navbar-link" href="nosotros.html">Nosotros </a></div>
             <div> <a id = "home-link" class="navbar-brand" href="Index.html">Home </a> </div>
             <div> <a id = "sedes-link" class="navbar-link" href="sedes.html">Sedes </a></div>
@@ -54,7 +54,7 @@
                     <li>Acceso en Cualquier Momento y en Cualquier Lugar </li>
                 </ul>
             </div>
-        <br><br>
+            <br>
 
             <div class="beneficios2">
              <img class="B2" src="img/B2.jpeg" alt="Imagen B2">
